docs/api/qiskit/0.19/qiskit.providers.models.UchannelLO.mdx
---
title: UchannelLO (v0.19)
description: API reference for qiskit.providers.models.UchannelLO in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.UchannelLO
---

# UchannelLO

<Class id="qiskit.providers.models.UchannelLO" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py" signature="UchannelLO(q, scale)" modifiers="class">
  Class representing a U Channel LO

  ### q

  <Attribute id="qiskit.providers.models.UchannelLO.q">
    Qubit that scale corresponds too.
  </Attribute>

  ### scale

  <Attribute id="qiskit.providers.models.UchannelLO.scale">
    Scale factor for qubit frequency.
  </Attribute>

  Initialize a UchannelLOSchema object

  **Parameters**

  *   **q** (*int*) – Qubit that scale corresponds too. Must be >= 0.
  *   **scale** (*complex*) – Scale factor for qubit frequency.

  **Raises**

  **QiskitError** – If q is \< 0

  ## Methods

  <span id="uchannello-from-dict" />

  ### from\_dict

  <Function id="qiskit.providers.models.UchannelLO.from_dict" signature="UchannelLO.from_dict(data)" modifiers="classmethod">
    Create a new UchannelLO object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the UChannelLO to create. It will be in the same format as output by [`to_dict()`](qiskit.providers.models.UchannelLO#to_dict "qiskit.providers.models.UchannelLO.to_dict").

    **Returns**

    The UchannelLO from the input dictionary.

    **Return type**

    [UchannelLO](qiskit.providers.models.UchannelLO "qiskit.providers.models.UchannelLO")
  </Function>

  <span id="uchannello-to-dict" />

  ### to\_dict

  <Function id="qiskit.providers.models.UchannelLO.to_dict" signature="UchannelLO.to_dict()">
    Return a dictionary format representation of the UChannelLO.

    **Returns**

    The dictionary form of the UChannelLO.

    **Return type**

    dict
  </Function>
</Class>

