docs/api/qiskit/1.2/qiskit.providers.models.UchannelLO.mdx
---
title: UchannelLO (v1.2)
description: API reference for qiskit.providers.models.UchannelLO in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.UchannelLO
---

# UchannelLO

<Class id="qiskit.providers.models.UchannelLO" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendconfiguration.py#L146-L210" signature="qiskit.providers.models.UchannelLO(q, scale)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  Class representing a U Channel LO

  ### q

  <Attribute id="qiskit.providers.models.UchannelLO.q">
    Qubit that scale corresponds too.
  </Attribute>

  ### scale

  <Attribute id="qiskit.providers.models.UchannelLO.scale">
    Scale factor for qubit frequency.
  </Attribute>

  Initialize a UchannelLOSchema object

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.providers.models.backendconfiguration.UchannelLO` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The models in `qiskit.providers.models` are part of the deprecated BackendV1 workflow and no longer necessary for BackendV2. If a user workflow requires these representations it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **q** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit that scale corresponds too. Must be >= 0.
  *   **scale** ([*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")) – Scale factor for qubit frequency.

  **Raises**

  [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – If q is \< 0

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.UchannelLO.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendconfiguration.py#L177-L189" signature="from_dict(data)" modifiers="classmethod">
    Create a new UchannelLO object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the UChannelLO to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.UchannelLO.to_dict "qiskit.providers.models.UchannelLO.to_dict").

    **Returns**

    The UchannelLO from the input dictionary.

    **Return type**

    [UchannelLO](#qiskit.providers.models.UchannelLO "qiskit.providers.models.UchannelLO")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.UchannelLO.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendconfiguration.py#L191-L201" signature="to_dict()">
    Return a dictionary format representation of the UChannelLO.

    **Returns**

    The dictionary form of the UChannelLO.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

